# cold-box

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  README.v2.md  pyproject.toml
cold-box-room/: .gitignore  .mcp.json  CLAUDE.md  README.md  design.md  designnew.md  pyproject.toml
cold-box-room/.claude/: settings.json
cold-box-room/.claude/hooks/: log-mcp-tool.sh
cold-box-room/cold_box_room/: __init__.py
cold-box-room/cold_box_room/agent/: __init__.py  cli.py  cli_room3.py  cli_room_a.py  cli_room_b.py  engine.py  llm.py  prompts.py  reset.py  situation.py  tools.py
cold-box-room/cold_box_room/e2e/: __init__.py  accuracy.py  cli.py  report.py  run_hallway.py  run_hallway_cc.py  run_layer1.py  workspace.py
cold-box-room/cold_box_room/e2e/benchmarks/: dfrws2008.json  ndlc_leakage_pc.json  terry_usb.json
cold-box-room/cold_box_room/mcp/: __init__.py  handlers.py  kitchen.py  register.py  server.py
cold-box-room/cold_box_room/planning/: __init__.py  checkpoint.py  extend.py  formalize.py  guard.py  harness.py  markdown.py  models.py  paths.py  plan_py.py  scoring.py  state.py
cold-box-room/cold_box_room/r1/: __init__.py  checkpoint.py  cli.py  evidence.py  guard.py  hallway.py  intake.py  manifest.py  paths.py  seal.py  staging_read.py  viewport.py
cold-box-room/cold_box_room/r2/: __init__.py  analyst_log.py  audit.py  checkpoint.py  errors.py  executor.py  harness_log.py  layer1_state.py  logbook_paths.py  mactime_utils.py  output_files.py  paths.py  sandbox.py  sandbox_input.py  scratch_analysis.py  security.py  skill_harness.py  tool_log.py
cold-box-room/cold_box_room/room_3/: __init__.py  analyst_log.py  checkpoint.py  layer2_state.py  logbook_paths.py  skill_log.py  tool_log.py
cold-box-room/cold_box_room/room_a/: __init__.py  cli.py
cold-box-room/cold_box_room/room_b/: __init__.py  cli.py
cold-box-room/cold_box_room/skills/: __init__.py  executor.py  models.py  port_batch.py  registry.py  script_helpers.py  skill_runner.py  skill_runtime.py  validate_record.py
cold-box-room/cold_box_room/testing/: __init__.py  hallway.py
cold-box-room/cold_box_room/tools/: __init__.py  agent_guidance.py  harness_probe.py  models.py  port_batch.py  registry.py  verify.py  verify_profiles.py
cold-box-room/cold_box_room/tools/fixtures/: sample.evtx  sample.pcap  sample.txt
cold-box-room/cold_box_room/ui/: __init__.py  server.py  state.py
cold-box-room/cold_box_room/ui/static/: app.js  index.html  styles.css
cold-box-room/docs/: CLAUDE_CODE.md  CLAUDE_CODE_SETUP.md  CLAUDE_CODE_START_PROMPT.md
cold-box-room/scripts/: build_tool_fixtures.py  fix_skill_harness_entries.py  inspect_harness_tools.py  inspect_skills.py  inspect_tools.py  monitor_case.sh  score_e2e_accuracy.py  setup_claude_code.sh
cold-box-room/skills/: SCHEMA.md  manifest.json  manifest.schema.json
cold-box-room/tests/: test_agent.py  test_agent_guidance.py  test_agent_situation.py  test_audit_cache.py  test_e2e_accuracy.py  test_e2e_hallway.py  test_e2e_kitchen.py  test_e2e_workspace.py  test_engine_parallel.py  test_evidence_intake.py  test_executor.py  test_executor_truncation.py  test_hallway_flow.py  test_icat_and_score.py  test_layer1_logbook.py  test_mactime_utils.py  test_mcp_handlers.py  test_mcp_parallel.py  test_plan_py.py  test_prompt_cohesion.py  test_r1_table.py  test_r2_r3_gate.py  test_r2_sandbox.py  test_room3.py  test_room_a.py  test_room_b.py  test_security_output.py  test_skill_harness_fixes.py  test_skill_runtime.py  test_skills_catalog.py  test_skills_executor.py  test_tools_catalog.py
cold-box-room/tools/: SCHEMA.md  harness_inspection_report.json  manifest.json  manifest.schema.json  skill_inspection_report.json  verification_report.json
docs/: ACCURACY-REPORT-HYBRID.md  ACCURACY-REPORT-LLM.md  ACCURACY-REPORT-TIER3-POLICY-FIX2.md  ACCURACY-REPORT.md  ACCURACY.md  ARCHITECTURE.md  BRAIN-COMPARISON.md  BRAIN-MODES.md  CASE-ALI-HADI.md  CLAUDE-CODE.md  DART-COMPARISON.md  DATASETS.md  LLM-HEAD-TO-HEAD-BENCHMARK.md  PROJECT_STORY.md  accuracy-latest.json
examples/: demo-ali-hadi.sh  demo-case-run.sh  demo-lab-run.sh  demo-run.sh
ground-truth/: ali-hadi-1.json  ali-hadi-7.json  ali-hadi-9.json  benchmark-manifest-hybrid.json  benchmark-manifest-llm.json  benchmark-manifest.json  dart-sample-evidence.json  dfrws2008.json  dfrws2011-android-case1.json  dfrws2011-android-case2.json  lab.json  macos-spotlight.json  nist-hacking-cfreds.json  nist-hacking.json  nist-ndlc.json  nitroba.json
postmortem_agent/: __init__.py  __main__.py  ali_hadi.py  cache.py  cli.py  core.py  coverage.py  diagnostic_memory.py  findings.py  invoke.py  live.py  llm.py  loop.py  narrative.py  progress.py  reasoner.py  reasoner_hybrid.py  reasoner_llm.py  reasoner_policy.py  scoring.py  state.py  synthesis.py  tools.py  verifier_bridge.py
postmortem_audit/: __init__.py  cli.py  log.py
postmortem_evidence/: __init__.py  cli.py  guard.py  integrity.py  manifest.py
postmortem_mcp/: __init__.py  __main__.py  android_parse.py  artifact_parse.py  audit_tool.py  catalog.py  config.py  dispatch.py  exfil_parse.py  extract.py  ez_tools.py  legacy_parse.py  log_parse.py  macos_parse.py  paths.py  pcap_parse.py  pst_parse.py  (+12 more)
(+125 files in other folders)
