[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cold-box-room"
version = "0.1.0"
description = "Cold-box hallway rooms — deterministic DFIR pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "mcp>=1.0"]

[project.scripts]
cold-box-room = "cold_box_room.r1.cli:main"
cold-box-room-mcp = "cold_box_room.mcp.server:main"
cold-box-room-agent = "cold_box_room.agent.cli:main"
cold-box-room-e2e = "cold_box_room.e2e.run_layer1:main"
cold-box-room-formalize-plan-a = "cold_box_room.room_a.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cold_box_room*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
