[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cold-box-room"
version = "0.1.0"
description = "Cold-box hallway rooms — deterministic DFIR pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "mcp>=1.0"]

[project.scripts]
cold-box-room = "cold_box_room.r1.cli:main"
cold-box-room-mcp = "cold_box_room.mcp.server:main"
cold-box-room-agent = "cold_box_room.agent.cli:main"
cold-box-room-agent-a = "cold_box_room.agent.cli_room_a:main"
cold-box-room-agent-b = "cold_box_room.agent.cli_room_b:main"
cold-box-room-agent-3 = "cold_box_room.agent.cli_room3:main"
cold-box-room-e2e = "cold_box_room.e2e.run_layer1:main"
cold-box-room-hallway = "cold_box_room.e2e.run_hallway:main"
cold-box-room-hallway-cc = "cold_box_room.e2e.run_hallway_cc:main"
cold-box-room-formalize-plan-a = "cold_box_room.room_a.cli:main"
cold-box-room-ui = "cold_box_room.ui.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cold_box_room*"]

[tool.setuptools.package-data]
"cold_box_room.ui" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
